--- a/rops/ide-gtk3.glade
+++ b/rops/ide-gtk3.glade
@@ -132,6 +132,7 @@
                         <property name="visible">True</property>
                         <property name="can_focus">False</property>
                         <property name="label" translatable="yes">#Find Next</property>
+                        <signal name="activate" handler="on_button2_clicked" swapped="no"/>
                         <accelerator key="F3" signal="activate"/>
                       </object>
                     </child>
